# foundation-v1-multi-hashing

./: .gitignore  .travis.yml  CMakeLists.txt  Common.h  Crypto.c  Crypto.h  Lyra2.c  Lyra2RE.c  Lyra2REV2.c  Lyra2REV2.h  Lyra2REV3.c  Lyra2REV3.h  Lyra2Z.c  Lyra2Z.h  README.md  allium.c  binding.gyp  blake2s.c  crypto.c  crypto.h  cryptonight.c  cryptonight_fast.c  hsr14.c  hsr14.h  index.js  lyra2REV2.c  lyra2Z.c  lyra2z16m330.c  lyra2z330.c  lyra2z330.h  m7.c  m7.h  magimath.c  magimath.cpp  magimath.h  minotaur.h  multihashing.cc  odo.cc  odo.h  package-lock.json  (+15 more)
.github/workflows/: build.yml
algorithms/: allium.c  allium.h  gost.c  gost.h  gr.c  gr.h  lyra2RE.c  lyra2REV3.c  lyra2z16m330.c  lyra2z16m330.h  lyra2z330.c  minotaur.c  phi1612.h  sm3.c  sm3.h  verthash.c  whirlpoolx.h  x16r.c  x16rt.c
algorithms/allium/: lyra2.c  lyra2.h  sponge.c  sponge.h
algorithms/cryptonote/: cryptonight.c  cryptonight_dark_lite.c  cryptonight_lite.c  cryptonight_soft_shell.c  cryptonight_turtle.c
algorithms/main/allium/: allium.c  allium.h
algorithms/sha3/: sph_blake.h  sph_blake2s.h  sph_skein.h
algorithms/test/: allium.test.js  blake.test.js  blake2s.test.js  c11.test.js  equihash.test.js  firopow.test.js  fugue.test.js  ghostrider.test.js  groestl.test.js  kawpow.test.js  keccak.test.js  minotaur.test.js  nist5.test.js  quark.test.js  qubit.test.js  scrypt.test.js  sha256d.test.js  skein.test.js  x11.test.js  x13.test.js  x15.test.js  x16r.test.js  x16rt.test.js
crypto/: int-util.h  oaes_lib.c
sha3/: blake2s.c  skein.c  sph_gost.h  sph_skein.c
(+71 files in other folders)
